fix: :lipstick: set full width for articles on mobile devices

--- a/components/Article/style.module.css
+++ b/components/Article/style.module.css
@@ -9,3 +9,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+}
